err/automabot.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-1.0.5.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/automabot'...
Compiling './lib/python3.5/site-packages/automabot/__main__.py'...
***   File "./lib/python3.5/site-packages/automabot/__main__.py", line 87
    TOPBAR = f"/{'#' * (terminal_width - 2)}\\\n"
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/automabot/bot.py'...
***   File "./lib/python3.5/site-packages/automabot/bot.py", line 37
    print(f"{f' Logged in as {self_username}': ^{self.terminal_width}}")
                                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/automabot/tools.py'...
***   File "./lib/python3.5/site-packages/automabot/tools.py", line 39
    input_msg = f"{descriptions[value]} : "
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/automabot-0.3.2.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/discord'...
Listing './lib/python3.5/site-packages/discord/bin'...
Listing './lib/python3.5/site-packages/discord/ext'...
Listing './lib/python3.5/site-packages/discord/ext/commands'...
Listing './lib/python3.5/site-packages/discord/ext/ipc'...
Listing './lib/python3.5/site-packages/discord.py-0.16.12.egg-info'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyfiglet'...
Listing './lib/python3.5/site-packages/pyfiglet/fonts'...
Listing './lib/python3.5/site-packages/pyfiglet-0.7.5.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/toml-0.9.4.egg-info'...
Listing './lib/python3.5/site-packages/websockets'...
Listing './lib/python3.5/site-packages/websockets/py35'...
Listing './lib/python3.5/site-packages/websockets-3.4.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
